version/0.12/_sources/api/solver/_autosummary/settings/set_damping_strengths.rst.txt
:orphan:

.. _set_damping_strengths:

set_damping_strengths
=====================

.. currentmodule:: ansys.fluent.core.solver.settings_231.set_damping_strengths

.. autoclass:: set_damping_strengths
    :show-inheritance:
    :undoc-members:
.. rubric:: Named object type

:ref:`axis_direction_child <axis_direction_child>`


.. rubric:: Included in:

================================================================   ========================================================

Parent                                                                                                              Summary

================================================================   ========================================================
:ref:`velocity_limiting_treatment <velocity_limiting_treatment>`       Velocity limiting related stabiity controls for VOF.

================================================================   ========================================================

