version/0.18/_sources/api/solver/_autosummary/settings/set_damping_strengths.rst.txt
:orphan:

.. _set_damping_strengths:

set_damping_strengths
=====================

.. autoclass:: ansys.fluent.core.solver.settings_232.set_damping_strengths.set_damping_strengths
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`axis_direction_child <axis_direction_child>`


.. rubric:: Included in:

================================================================   ========================================================

Parent                                                                                                              Summary

================================================================   ========================================================
:ref:`velocity_limiting_treatment <velocity_limiting_treatment>`       Velocity limiting related stabiity controls for VOF.

================================================================   ========================================================

